[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LogAssist"
version = "1.0.0"
authors = [
  { name="horrible", email="shinjpn1@gmail.com" },
]
description = "A simple and customizable logging library for Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/horrible-gh/Logger"
"Bug Tracker" = "https://github.com/horrible-gh/Logger/issues"
